--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
         <h1>CONTACT ME</h1>
         <p>Phone -  6546465465</p>
         <p>Email -  dgdfghdfh32@gmai.com</p>
-        <form class="" action="FIRST.html" method="post">
+        <form class="" action="first.html.html" method="post">
             <label>Your Name :</label>
             <input type="text" name="" value="">
             <input type="color" name="" value="">
